Fix code errors

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link href="css/grid.css" rel="stylesheet">
   <link href="css/type.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
+  <link href="http://fonts.googleapis.com/css?family=Roboto+Slab:400,700" rel="stylesheet">
 </head>
 <body>
 
@@ -16,10 +17,10 @@
     <img class="img-flex" src="http://placehold.it/320x240" alt="">
     <div class="island">
       <h2 class="card-title peta push-0">Giant robots</h2>
-      <p>Smashing. crashing, bashing all,<br>Giant robots have real gall.<p?
+      <p>Smashing, crashing, bashing all,<br>Giant robots have real gall.</p>
       <a class="btn" href="#">Destroy!</a>
     </div>
   </div>
 
-  </body>
-  </html>
+</body>
+</html>
